<resources>
    <string name="app_name">handy</string>
    <string name="neutral">خنثی</string>
    <string name="domain">دامنه حرکت</string>
    <string name="domain_to_normal">دانمه نسبت به نرمال</string>
    <string name="differences">اختلاف بین زوایا</string>
    <string name="thumb_ip_flexion">Thumb IP Flexion</string>
    <string name="thumb_mcp_flexion">Thumb MCP Flexion</string>
    <string name="thumb_cmc_radial_abduction">Thumb CMC Radial Abduction</string>
    <string name="finger_dip_rom">Finger DIP ROM</string>
    <string name="finger_pip_rom">Finger PIP ROM</string>
    <string name="finger_mcp_rom">Finger MCP ROM</string>
    <string name="image">عکس</string>
    <string name="video">فیلم</string>
    <string name="camera">دوربین</string>
    <string name="first_image_button_title">انتخاب تصویر اول</string>
    <string name="second_image_button_title">انتخاب تصویر دوم</string>
    <string name="video_input_button_title">انتخاب فیلم</string>
    <string name="camera_input_button_title">روشن کردن دوربین</string>
    <string name="start_process_title">شروع پردازش</string>
    <string name="submit_title">تایید</string>
    <string name="select_angle_title">انتخاب زاویه‌ها برای محاسبه</string>
    <string name="input_image_error">تصاویر ورودی را انتخاب کنید.</string>
    <string name="input_selected_angle_error">زاویه‌های مورد نظر را انتخاب کنید.</string>
    <string name="input_video_error">فیلم ورودی را انتخاب کنید.</string>
    <string name="first_image">تصویر اول:</string>
    <string name="second_image">تصویر دوم:</string>
    <string name="angle_different_in_two_images">اختلاف زاویه در دو تصویر:</string>
    <string name="natural_angle">زاویه در حالت نرمال:</string>
    <string name="different_to_natural">اخلاف با زاویه در حالت نرمال:</string>
</resources>