<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:background="@drawable/black_border_background"
    android:layout_margin="2dp"
    >

    <TextView
        android:id="@+id/angle_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TextView.CalculatedAngle.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_image"
        android:theme="@style/Theme.TextView.CalculatedAngle"
        app:layout_constraintEnd_toStartOf="@id/first_angle_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/angle_name_text" />

    <TextView
        android:id="@+id/first_angle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TextView.CalculatedAngle.Values"
        app:layout_constraintBottom_toBottomOf="@id/first_image_text"
        app:layout_constraintEnd_toStartOf="@id/guideline_center_vertical"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/first_image_text"
        app:layout_constraintTop_toTopOf="@id/first_image_text" />

    <TextView
        android:id="@+id/second_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_image"
        android:theme="@style/Theme.TextView.CalculatedAngle"
        app:layout_constraintEnd_toStartOf="@id/second_angle_text"
        app:layout_constraintStart_toEndOf="@id/guideline_center_vertical"
        app:layout_constraintTop_toBottomOf="@id/angle_name_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <TextView
        android:id="@+id/second_angle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TextView.CalculatedAngle.Values"
        app:layout_constraintBottom_toBottomOf="@id/second_image_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/second_image_text"
        app:layout_constraintTop_toTopOf="@id/second_image_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/different_angle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/angle_different_in_two_images"
        android:theme="@style/Theme.TextView.CalculatedAngle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_image_text" />

    <TextView
        android:id="@+id/different_angle_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TextView.CalculatedAngle.Values"
        app:layout_constraintBottom_toBottomOf="@id/different_angle_text"
        app:layout_constraintStart_toEndOf="@id/different_angle_text"
        app:layout_constraintTop_toTopOf="@id/different_angle_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <TextView
        android:id="@+id/normal_angle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/natural_angle"
        android:theme="@style/Theme.TextView.CalculatedAngle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/different_angle_text" />

    <TextView
        android:id="@+id/normal_angle_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TextView.CalculatedAngle.Values"
        app:layout_constraintBottom_toBottomOf="@id/normal_angle_text"
        app:layout_constraintStart_toEndOf="@id/normal_angle_text"
        app:layout_constraintTop_toTopOf="@id/normal_angle_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <TextView
        android:id="@+id/different_to_normal_angle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/different_to_natural"
        android:theme="@style/Theme.TextView.CalculatedAngle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/normal_angle_text" />

    <TextView
        android:id="@+id/different_to_normal_angle_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TextView.CalculatedAngle.Values"
        app:layout_constraintBottom_toBottomOf="@id/different_to_normal_angle_text"
        app:layout_constraintStart_toEndOf="@id/different_to_normal_angle_text"
        app:layout_constraintTop_toTopOf="@id/different_to_normal_angle_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

</androidx.constraintlayout.widget.ConstraintLayout>